[package]
name = "music_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", features = [
    "client",
    "standard_framework",
    "voice",
] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
songbird = "0.4.0"
reqwest = "0.12.3"
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
