[package]
name = "music_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.12.0", features = ["client", "framework", "voice"] }
tokio = { version = "1.35.1", features = ["full"] }
songbird = { version = "0.4.1", features = ["builtin-queue", "receive"] }
dotenv = "0.15.0"
tracing-subscriber = "0.3.18"
poise = "0.6.1"
reqwest = { version = "0.11", features = ["stream"] }
uuid = "1.8.0"
lazy_static = "1.4.0"
tracing = { version = "0.1.40", features = ["log"] }

[dependencies.symphonia]
version = "0.5.2"
features = ["all-codecs"]
